calculator v4.2 (fix copy to clipboard on mobile)

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,6 @@ img {
   text-align: right;
   width: 100%;
   touch-action: manipulation;
-  user-select: none;
   cursor: pointer;
 }
 
@@ -129,6 +128,7 @@ img {
 
 #expression,
 #result {
+  user-select: none;
   white-space: wrap;
   transition: all var(--transition-sec) ease;
   word-break: break-all;
@@ -295,18 +295,17 @@ img {
   transform: translateX(-50%);
   background-color: var(--orange);
   border-radius: 7px;
+  z-index: 1000;
   padding: 5px;
   animation: slideIn 0.5s ease-in-out forwards, fadeOut 0.5s 1s ease-in-out forwards;
 }
 @keyframes slideIn {
   from {
     opacity: 0;
-
     transform: translateX(-50%) translateY(100%);
   }
   to {
     opacity: 1;
-
     transform: translateX(-50%) translateY(0);
   }
 }
